<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="10sp"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10sp"
        >

        <TextView android:text="@string/ManageKeysTitle"
                  android:id="@+id/Title"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:textStyle="bold"
                  android:layout_marginTop="10sp"
            />

        <TextView android:text="@string/ManageKeysHelpP1"
                  android:id="@+id/P1"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:layout_marginTop="10sp"
            />

        <TextView android:text="@string/ManageKeysHelpP2"
                  android:id="@+id/P2"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:layout_marginTop="10sp"
            />

        <TextView android:text="@string/ManageKeysHelpP3"
                  android:id="@+id/P3"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:layout_marginTop="10sp"
            />

        <TextView android:text="@string/ManageKeysHelpP4"
                  android:id="@+id/P4"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:layout_marginTop="10sp"
            />


        <Button android:text="@string/OkButtonLabel"
                android:id="@+id/OkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="10sp"
                android:minWidth="100sp"
            />

    </LinearLayout>
</ScrollView>

