<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="10sp"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10sp"
        >

        <TextView android:text="@string/NewKeystoreIntroTitle"
                  android:id="@+id/Title"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:textStyle="bold"
                  android:layout_marginTop="10sp"
            />

        <TextView android:text="@string/NewKeystoreIntroP1"
                  android:id="@+id/P1"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:layout_marginTop="10sp"
            />

        <TextView android:text="@string/NewKeystoreIntroP2"
                  android:id="@+id/P2"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:layout_marginTop="10sp"
            />

        <TextView android:text="@string/NewKeystoreIntroP3"
                  android:id="@+id/P3"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:layout_marginTop="10sp"
            />

        <TextView android:text="@string/NewKeystoreIntroP4"
                  android:id="@+id/P4"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:layout_marginTop="10sp"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            >
            <Button android:text="@string/CancelButtonLabel"
                    android:id="@+id/CancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:minWidth="100sp"
                />

            <Button android:text="@string/ContinueButtonLabel"
                    android:id="@+id/ContinueButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginLeft="20sp"
                    android:minWidth="100sp"
                />

        </LinearLayout>

    </LinearLayout>
</ScrollView>

