<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/about_dialog_layout_root"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:paddingBottom="10dp"
              >
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_height="wrap_content"
                 android:layout_width="fill_parent"
                 android:padding="10sp">
        <TableRow>
            <!-- 
            <ImageView android:id="@+id/about_icon"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/icon"
                       android:layout_marginRight="10dp"
                       />
            -->
            <TextView android:id="@+id/about_title_view"
                       android:layout_width="wrap_content"
                       android:layout_height="fill_parent"
                       android:textSize="24sp"
                       android:textStyle="bold"              
                       android:text="@string/AboutZipSignerBanner"
              />
        </TableRow>
    </TableLayout>
                   
    <TextView android:id="@+id/about_description_view"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18sp"              
              android:text="@string/AboutZipSignerDescription"
              />
    <TextView android:id="@+id/about_version_view"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:text="@string/AboutZipSignerVersionTemplate"
              android:layout_marginTop="20sp"
              />
    <TextView android:id="@+id/about_author_view"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18sp"              
              android:text="@string/AboutZipSignerAuthor"
              />        
    <TextView android:id="@+id/about_copyright_view"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="14sp"              
              android:text="@string/AboutZipSignerCopyright"
              />                                   
    <TextView android:id="@+id/about_fm_attr_view"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="14sp"              
              android:text="@string/AboutFmAttribution"
              android:layout_marginTop="10sp"
              />                    
    <TextView android:id="@+id/about_fm_icons_attr_view"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="14sp"              
              android:text="@string/AboutFmIconsAttribution"
              android:layout_marginTop="10sp"
              />                                                            
    <Button android:id="@+id/AboutCloseButton" 
  	    	android:text="@string/CloseButtonLabel"
   		    android:layout_width="wrap_content" 
   		    android:layout_height="wrap_content"
   		    android:layout_marginTop="20sp"
   		    android:layout_marginBottom="20sp"
            android:minWidth="100sp"
        />
</LinearLayout>