<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10sp"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
            >
            <Button android:text="@string/InOutPickButtonLabel"
                    android:id="@+id/InOutPickButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
 
            <Button android:text="@string/OpenPickButtonLabel"
                    android:id="@+id/OpenPickButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
 
            <Button android:text="@string/SaveAsPickButtonLabel"
                    android:id="@+id/SaveAsPickButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
 
        </LinearLayout>
         
        <TextView android:text="@string/InputZipLabel"
                  android:id="@+id/InputZipTextView"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:textStyle="bold"
                  android:layout_marginTop="10sp"
            />
           
        <EditText android:text="/sdcard/test_unsigned_input.zip"
                  android:id="@+id/InFileEditText"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:inputType="textNoSuggestions"
                  android:minWidth="500sp"
                  android:maxWidth="500sp"
            />
           
 
 
        <TextView android:text="@string/SignedZipLabel"
                  android:id="@+id/SignedZipTextView"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:textStyle="bold"
                  android:layout_marginTop="10sp"
            />
               
        <EditText android:text="/sdcard/test_signed.zip"
                  android:id="@+id/OutFileEditText"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:inputType="textNoSuggestions"
                  android:minWidth="500sp"
                  android:maxWidth="500sp"
                  />
 



        <TableLayout android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10sp"
            >
            <TableRow>
                <TextView android:text="@string/KeyModeLabel"
                          android:id="@+id/KeyModeTextView"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="5sp"
                          android:textStyle="bold"
                          android:textSize="16sp"
                    />

                <TextView android:text="@string/SignatureAlgorithmLabel"
                          android:id="@+id/SignatureAlgorithmTextView"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="15sp"
                          android:textStyle="bold"
                          android:textSize="16sp"
                    />
            </TableRow>
            <TableRow>
                <Spinner
                    android:id="@+id/KeyModeSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/KeyModeLabel"
                    android:textSize="32sp"
                    />

                <Spinner
                    android:id="@+id/CertSignatureAlgorithm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:prompt="@string/CertSignatureAlgorithmLabel"
                    android:textSize="32sp"
                    />
            </TableRow>
        </TableLayout>

        <Button android:text="@string/SignButtonLabel"
                android:id="@+id/SignButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:textSize="16sp"/>
         
    </LinearLayout>
</ScrollView>
